# FlashReport

./: .gitignore  Docker  Dockerfile  config.py  flashreport_session.session  main.py  pyproject.toml
Algorithm/: cluster.py  filter.py  gemini_filter.py
Algorithm/system_instructions/: clustering_instructions.txt  filter_instructions.txt
Auth/: app.py  db_communicator.py  verifier.py
scrapper/: database.py  flood.py  preprocessor.py  scrapy.py  telegram.py
scrapper/adapter/: arise.py  businessday.py  channeltv.py  guardian.py  premuimtimes.py  punch.py  saharareporters.py  vanguard.py
tests/: test_arise.py  test_businessday.py  test_channel.py  test_db_communicator.py  test_filter.py  test_geminifilter.py  test_guardian.py  test_premuim.py  test_preprocessor.py  test_punch.py  test_saharareporters.py  test_vanguard.py  test_weather.py
